--- a/kriswuollett-sandbox-foursquare-web/src/main/webapp/WEB-INF/web.xml
+++ b/kriswuollett-sandbox-foursquare-web/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,16 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+"-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+"http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+	<display-name>Archetype Created Web Application</display-name>
+	<servlet>
+		<servlet-name>HelloServlet</servlet-name>
+		<servlet-class>kriswuollett.sandbox.foursquare.api.HelloServlet</servlet-class>
+	</servlet>
+	<!-- jspc insertionMarker -->
+	<servlet-mapping>
+		<servlet-name>HelloServlet</servlet-name>
+		<url-pattern>/hello</url-pattern>
+	</servlet-mapping>
 </web-app>
